Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
       <span>ESCALERA APARICIO ISABEL</span>
       <a href="certificado.html?modelo=escalera-aparicio-isabel.glb&nombre=Escalera%20Aparicio%20Isabel">Ver</a>
     </div>
+<div class="item">
+    <span>ZULEYMA ITZEL FLORES ORTEGA</span>
+    <a href="certificado.html?modelo=flores-ortega-zuleyma-itzel.glb&nombre=Zuleyma%20Itzel%20Flores%20Ortega">Ver</a>
+</div>
 
     <div class="item">
       <span>GARCIA CASTAÑEDA ROSA MAYRA</span>
@@ -205,3 +209,4 @@
   </div>
 </body>
 </html>
+
