Fix formatting of names and links in index.html
The HTML content has been updated to correct the formatting of the list items and ensure proper display of names and links.

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <a href="certificado.html?modelo=escalera-aparicio-isabel.glb&nombre=Escalera%20Aparicio%20Isabel">Ver</a>
     </div>
 <div class="item">
-    <span>ZULEYMA ITZEL FLORES ORTEGA</span>
+    <span>FLORES ORTEGA ZULEYMA ITZEL </span>
     <a href="certificado.html?modelo=flores-ortega-zuleyma-itzel.glb&nombre=Zuleyma%20Itzel%20Flores%20Ortega">Ver</a>
 </div>
 
@@ -209,4 +209,5 @@
   </div>
 </body>
 </html>
+
 
